# lab-natty-or-not

./: README.md  pyproject.toml
space_teli/: __main__.py
space_teli/core/: bullet.py  config.py  enemies.py  player.py
space_teli/utils/: icc_remover.py
